Do not recommend git as an alternative to git
The link description would tell people to use git instead of git for
updating ports. Remove that cross reference as suggested in the PR. Note
that freebsd-update is eventually going away as well, but keep it here
for now and remove it in a separate change in the future.

Refrain from mentioning other third party tools in this section for keeping
consistency with the rest of the handbook.

PR:		    273359
Based on patch by:  grahamperrin@gmail.com

--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -197,7 +197,7 @@ Mirror list maintained by the community and other companies:
 | mirror.ps.kz
 | http://mirror.ps.kz/freebsd[http] link:ftp://mirror.ps.kz/freebsd[ftp]
 
-| 
+|
 | mirror.neolabs.kz
 | link:http://mirror.neolabs.kz/freebsd[http] link:ftp://mirror.neolabs.kz/freebsd[ftp]
 
@@ -316,7 +316,7 @@ As of April 2021, FreeBSD uses git as the only version control system for storin
 [NOTE]
 ====
 Git is generally a developer tool.
-Users may prefer to use `freebsd-update` (crossref:cutting-edge[updating-upgrading-freebsdupdate,“FreeBSD Update”]) to update the FreeBSD base system, and `git` (crossref:ports[ports-using,“Using the Ports Collection”]) to update the FreeBSD Ports Collection.
+Users may prefer to use `freebsd-update` (crossref:cutting-edge[updating-upgrading-freebsdupdate,“FreeBSD Update”]) to update the FreeBSD base system.
 ====
 
 This section demonstrates how to install Git on a FreeBSD system and use it to create a local copy of a FreeBSD source code repository.
