Consistency between section title and image caption
Be consistent when labeling the boot loader screen. The title said "Boot
Menu" but the caption of the image below reads "Boot Loader Menu". Add
the "Loader" part to the title as well.

PR:	    268632

--- a/documentation/content/en/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/en/books/handbook/bsdinstall/_index.adoc
@@ -283,7 +283,7 @@ When booting from CD or DVD, turn on the computer and insert the media at the fi
 How to configure the system to boot from the inserted media depends upon the architecture.
 
 [[bsdinstall-view-probe]]
-=== FreeBSD Boot Menu
+=== FreeBSD Boot Loader Menu
 
 Once the system boots from the installation media, a menu similar to the following will be displayed:
 
